@@ -41,7 +41,7 @@ import org.testng.annotations.Test;
  * @test
  * @bug 6937964
  * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
- * @run testng/othervm -DrunSecMngr=true datatype.Bug6937964Test
+ * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow datatype.Bug6937964Test
  * @run testng/othervm datatype.Bug6937964Test
  * @summary Test Duration is normalized.
  */
